# tiny_denoiser_v2

./: .gitignore  CMakeLists.txt  Kconfig  README.md  SFUGraph.src  cluster_fn.c  fft_forward.h  fft_inverse.h  gaptest.yml  gvcontrol  main_demo.c  main_wav.c  requirements.txt  run_accuracy_test.sh  run_accuracy_test_onnx.sh  sdk.config  tinydenoiser.h
bash_scripts/: run_accuracy_test.sh  run_accuracy_test_onnx.sh  run_gvsoc_test.sh  run_nntool_test.sh  run_perf_test.sh
model/: tt_denoiser_rank_16.onnx  tt_denoiser_rank_48.onnx
model/tensor_train/: tt_denoiser_rank_112.onnx  tt_denoiser_rank_2.onnx  tt_denoiser_rank_4.onnx  tt_denoiser_rank_8.onnx  tt_denoiser_rank_80.onnx
nntool_scripts/: collect_statistics.py  denoiser_nntool_utils.py  denoiser_utils.py  eval_pesq.py  fft_nntool_script.py  nn_nntool_script.py  test_audio_results_dataset.py  test_nntool_model.py  test_nntool_model_perf.py  test_onnx.py
onnx_scripts/: README.md  test_onnx_vs_nntool_tt_models.py
results_on_dataset/: nntool_librimix_subset_all_snr.csv  nntool_valentini_10samples.csv  onnx_valentini_10samples.csv
